# AP4A_project

./: Badge.cpp  Badge.h  CMakeLists.txt  LecteurBadge.cpp  LecteurBadge.h  Scheduler.cpp  Scheduler.h  Server.cpp  Server.h  Serveur.cpp  Serveur.h  autorisation.csv  log.csv  main.cpp
